--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Install weechat
       run: sudo apt-get install -y weechat-headless
     - name: Run integration test
-      run: tests/test.sh
+      run: test/test.sh
